# ohcrabgit

./: Cargo.toml  NEWS.md  README.md
.claude/: settings.local.json
src/: bisect.rs  blame.rs  clean_dir.rs  committed_to_main.rs  committed_to_wrong.rs  conflict.rs  git.rs  lang.rs  latest_message.rs  lib.rs  log_deleted_file.rs  log_deleted_line.rs  main.rs  path.rs  rebase_i.rs  reset.rs  revparse.rs  small_change.rs  split_changes.rs  time_machine.rs  undo_commit.rs  undo_file.rs  worktree.rs
templates/: bisect-instructions.en.txt  bisect-instructions.es.txt  bisect-instructions.fr.txt  bisect-tip.en.txt  bisect-tip.es.txt  bisect-tip.fr.txt  blame-instructions.en.txt  blame-instructions.es.txt  blame-instructions.fr.txt  blame-tip.fr.txt  clean_dir-instructions.en.txt  clean_dir-instructions.es.txt  clean_dir-instructions.fr.txt  clean_dir-tip.en.txt  clean_dir-tip.es.txt  clean_dir-tip.fr.txt  committed_to_main-instructions.es.txt  committed_to_main-instructions.fr.txt  committed_to_main-instructions.txt  committed_to_main-tip.en.txt  committed_to_main-tip.es.txt  committed_to_main-tip.fr.txt  committed_to_main-tip.txt  committed_to_wrong-instructions.es.txt  committed_to_wrong-instructions.fr.txt  committed_to_wrong-instructions.txt  committed_to_wrong-tip.en.txt  committed_to_wrong-tip.es.txt  committed_to_wrong-tip.fr.txt  committed_to_wrong-tip.txt  conflict-instructions.en.txt  conflict-instructions.es.txt  conflict-instructions.fr.txt  conflict-tip.en.txt  conflict-tip.es.txt  conflict-tip.fr.txt  gitignore.txt  latest_message-instructions.en.txt  (+75 more)
(+2 files in other folders)
