[package]
name = "ohcrabgit"
version = "0.1.0"
edition = "2024"
include = ["templates/"]

[dependencies]
  git2 = "0.20.1"
  time = { version = "0.3", features = ["macros"] }
  tempfile = "3"
  rand = "0.9.0"
  clap = { version = "4.5.32", features = ["derive"] }
  clap_derive = { version = "4.0.0-rc.1" }
